# pytemplate

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pytemplate.html  requirements.txt  ruff.toml  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: python-app.yml
_sources/: pytemplate.rst.txt
docs/source/: conf.py  index.rst
pytemplate/: main.py
qtmlib/: main.py  utils.py
tests/: __init__.py  test_main.py  test_utils.py
