[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytemplate"
version = "0.0.1"
description = "A python library"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Author", email = "author@email.com" }]

[dependency-groups]
dev = [
  "pre-commit==4.1.0",
  "pytest==8.3.4",
  "sphinx==8.1.3",
]

[tool.setuptools.packages.find]
where = ["."]

[project.urls]
Repository = "https://github.com/CQCL/pytemplate.git"

# See https://microsoft.github.io/pyright/#/getting-started
[tool.pyright]
include = ["pytemplate", "tests"]
ignore = ["**/*.ipynb"]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.refurb]
python_version = "3.13"
